# pyxcore

./: README.md
pyxcore.language/: BRANDING.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  DELIVERY.md  GETTING_STARTED.md  INSTALL.md  LICENSE  Makefile  PROJECT_NOTES.md  PROJECT_SUMMARY.md  README.md  REFERENCE.md  STDLIB.md  demo.py  pyproject.toml  pyx.bat  pyx.py  requirements.txt
pyxcore.language/benchmarks/: benchmark.py
pyxcore.language/docs/: README.md  architecture.md  cli.md  stdlib.md  verification.md
pyxcore.language/examples/: classes.pyx  conditions.pyx  db_example.pyx  error_handling.pyx  functions.pyx  hello.pyx  pattern_match.pyx  sql_example.pyx
pyxcore.language/pyxcore/: cli.py
pyxcore.language/pyxcore/compiler/: ast_nodes.py  formatter.py  interpreter.py  jit.py  lexer.py  llvm_backend.py  parser.py  parser_generics.py  parser_pattern_matching.py  pipeline.py  semantic.py  ssa_optimizer.py
pyxcore.language/pyxcore/lsp/: server.py
pyxcore.language/pyxcore/package_registry/: client.py  server.py
pyxcore.language/pyxcore/runtime/: gc.py
pyxcore.language/pyxcore/stdlib/: collections.py  fs.py  io.py  jsonlib.py  (+4 more)
pyxcore.language/tests/: test_interpreter.py  test_lexer_parser.py  test_vm.py
pyxcore.language/vscode-extension/: README.md  package.json
pyxcore_compiler_clean/: README.md  TEST_RESULT.json  install_pyxcore.cmd  install_pyxcore.ps1  pyproject.toml  uninstall_pyxcore.cmd
pyxcore_compiler_clean/examples/: hello.pyx  loop.pyx  math.pyx
pyxcore_compiler_clean/pyxcore/: cli.py
pyxcore_compiler_clean/tests/: basic.pyx
(+14 files in other folders)
