[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "pyxcore"
version = "0.8.0"
description = "PyxCore programming language compiler, VM, runtime, stdlib and tooling."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PyxCore Team" }]
license = { text = "MIT" }
dependencies = []
[project.optional-dependencies]
llvm = ["llvmlite>=0.43"]
server = ["fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2"]
dev = ["pytest>=8"]
[project.scripts]
pyx = "pyxcore.cli:main"
[tool.setuptools.packages.find]
include = ["pyxcore*"]
